updated code for language detect and convert

--- a/nlp/document language detect.ipynb
+++ b/nlp/document language detect.ipynb
@@ -8,13 +8,6 @@
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
-    "# from raxutil.nlp.cat16utilities import *\n",
-    "# from raxutil.nlp.chunker import *\n",
-    "# from raxutil.nlp.faresheet import *\n",
-    "# from raxutil.nlp.production import *\n",
-    "# from raxutil.nlp.tagger import *\n",
-    "# from raxutil.nlp.spellchecker import *\n",
-    "\n",
     "\n",
     "import cssutils\n",
     "from functools import reduce\n",
@@ -38,9 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# atlas_client=MongoClient('mongodb://gerald:heroku01@cluster0-shard-00-00-yvbwp.mongodb.net:27017,cluster0-shard-00-01-yvbwp.mongodb.net:27017,cluster0-shard-00-02-yvbwp.mongodb.net:27017/admin?replicaSet=Cluster0-shard-0&ssl=true')\n",
-    "# client=MongoClient('mongodb://gerald:heroku01@127.0.0.1:27017')\n",
-    "client = MongoClient(\"mongodb://raxPaper:vN9k32dXma@cluster0-shard-00-00-yvbwp.mongodb.net:27017,cluster0-shard-00-01-yvbwp.mongodb.net:27017,cluster0-shard-00-02-yvbwp.mongodb.net:27017/raxdb?replicaSet=Cluster0-shard-0&ssl=true&authSource=admin\")\n",
+    "client = MongoClient('localhost:27017')\n",
     "db=client.raxdb\n",
     "faresheet = 'CXfaresheets_new'\n",
     "fs = db['CXfaresheets_new']"
@@ -50209,7 +50200,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "update the language class for each sheet"
+    "### update the language class for each sheet"
    ]
   },
   {
